# MosPro

./: .gitignore  README.md  time-sheet.md
openGL/2D/: glEngine.sln
openGL/2D/MosPro/: CMakeLists.txt  ColorFragmentShader.fragmentshader  MosPro.sln  MosPro.vcxproj  MosPro.vcxproj.filters  TransformVertexShader.vertexshader  box2D.cpp  box2D.h  glmIO.cpp  glmIO.h  main.cpp
openGL/2D/MosPro/Debug/: CL.read.1.tlog  CL.write.1.tlog  MosPro.ilk  MosPro.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
openGL/2D/MosPro/Release/: CL.read.1.tlog  CL.write.1.tlog  MosPro.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
openGL/2D/MosPro/demo/: readme.txt
openGL/2D/MosPro/graphics/: bufferObject.cpp  bufferObject.h  circleGeometry2D.cpp  geometry2D.h  glEngine2D.cpp  glEngine2D.h  material2D.cpp  material2D.h  shape2D.cpp  shape2D.h  temporaryBufferObject.cpp  temporaryBufferObject.h  wallGeometry2D.cpp
openGL/2D/MosPro/include/: box2D.h  glmIO.h
openGL/2D/MosPro/include/graphics/: circleGeometry2D.h  geometry2D.h  shape2D.h  temporaryBufferObject.h  wallGeometry2D.h
openGL/2D/MosPro/include/physics/: BSPNode2D.h  collisionDetector2D.h  forceGenerator2D.h  gravity2D.h  immovableBody2D.h  mbState.h  mbStateMap.h  minkowskiPoint2D.h  movableBody2D.h  rigidBody2D.h  spring.h
openGL/2D/MosPro/lib/: debugGL.cpp  debugGL.h  debugInterface.h
openGL/2D/MosPro/physics/: BSPNode2D.h  bspNode2D.cpp  collision2D.cpp  collision2D.h  collisionDetector2D.cpp  collisionDetector2D.h  collisionGroup.cpp  collisionGroup.h  collisionGroups.cpp  collisionGroups.h  contactGroup.h  edge.cpp  edge.h  forceGenerator2D.cpp  gravity2D.cpp  immovableBody2D.cpp  immovableBody2D.h  mbState.h  mbStateMap.cpp  minkowskiPoint2D.cpp  minkowskiPoint2D.h  movableBody2D.cpp  movableBody2D.h  physicsEngine2D.cpp  physicsEngine2D.h  potentialCollision2D.cpp  potentialCollision2D.h  rigidBody2D.cpp  rigidBody2D.h  spring.cpp
openGL/2D/MosPro/src/: box2D.cpp  glmIO.cpp  main.cpp
openGL/2D/MosPro/src/graphics/: bufferObject.cpp  circleGeometry2D.cpp  geometry2D.cpp  glEngine2D.cpp  material2D.cpp  shape2D.cpp  temporaryBufferObject.cpp  wallGeometry2D.cpp
openGL/2D/MosPro/src/lib/: debugGL.cpp
openGL/2D/MosPro/src/physics/: bspNode2D.cpp  collision2D.cpp  collisionDetector2D.cpp  contactGroup.cpp  forceGenerator2D.cpp  gravity2D.cpp  immovableBody2D.cpp  mbState.cpp  minkowskiPoint2D.cpp  movableBody2D.cpp  physicsEngine2D.cpp  rigidBody2D.cpp  spring.cpp
openGL/2D/glEngine/: glEngine.vcxproj  glEngine.vcxproj.filters  glEngine2D.h  main.cpp  material2D.h  shape2D.h
openGL/2D/graphicsEngine/: ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader  geometry2D.cpp  material2D.cpp  shape2D.cpp
openGL/prestudy/Shape/: Shape.sln
openGL/prestudy/Shape/Shape/: Shape.vcxproj  graphicsEngine.cpp  graphicsEngine.h  main.cpp  rigidBody2D.cpp  rigidBody2D.h  shape.cpp  shape.h
openGL/prestudy/Shape/Shape/Debug/: CL.read.1.tlog  CL.write.1.tlog  Shape.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
prestudy/circles/: circles.m
prestudy/shapes/: collisionChecker.asv  collisionChecker.m  edge.asv  edge.m  findClosestRotationAngle.m  gravity.m  plotVector.m  plotline.m  shape.asv  shape.m  shape_simulation.asv  shape_simulation.m  springForceGenerator.m  support.m
prestudy/square/: physics_square.m  simulation_square.m
report/: Report.tex  blindtext.sty
report/illustrations/: illustrationer_boundingbox.eps  illustrationer_gjk.eps  illustrationer_impulse.eps  illustrationer_linear.eps  illustrationer_nonlinear.eps  illustrationer_penalty.eps  illustrationer_quadtree.eps  illustrationer_sepaxis1.eps  illustrationer_sepaxis2.eps
